# aegledll

./: CMakeLists.txt  README.md  SECURITY.md  build.ps1  dllmain.cpp
.github/: build.yml
Animations/: Animations.cpp  Animations.hpp
GUI/: GUI.cpp  GUI.hpp
Hook/: Hook.cpp  Hook.hpp
Input/: Input.cpp  Input.hpp
Modules/: ModuleHeader.hpp
Modules/Combat/Hitbox/: Hitbox.cpp  Hitbox.hpp
Modules/Combat/Reach/: Reach.cpp  Reach.hpp
Modules/Misc/UnlockFPS/: UnlockFPS.cpp  UnlockFPS.hpp
Modules/Movement/AutoSprint/: AutoSprint.cpp  AutoSprint.hpp
Modules/Movement/Timer/: Timer.cpp  Timer.hpp
Modules/Terminal/: Terminal.cpp  Terminal.hpp
Modules/Visuals/CPSCounter/: CPSCounter.cpp  CPSCounter.hpp
Modules/Visuals/FullBright/: FullBright.cpp  FullBright.hpp
Modules/Visuals/Keystrokes/: Keystrokes.cpp  Keystrokes.hpp
Modules/Visuals/Keystrokes/Helper/: HelperFunctions.hpp
Modules/Visuals/MotionBlur/: MotionBlur.cpp  MotionBlur.hpp
Modules/Visuals/RenderInfo/: RenderInfo.cpp  RenderInfo.hpp
Modules/Visuals/Watermark/: Watermark.cpp  Watermark.hpp
Utils/: HudElement.hpp
